# plutarch-template

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  cabal.project  flake.nix  hie.yaml  plutarch-template.cabal
app/: Main.hs
pprelude/: PPrelude.hs
src/: Dummy.hs  Fib.hs  Utils.hs
src/Stuff/: Dummy.hs
